--- a/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/alternative_means_diligent_search.yml
+++ b/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/alternative_means_diligent_search.yml
@@ -1,6 +1,7 @@
 ---
 include:
-  - docassemble.MAVirtualCourt:basic-questions.yml
+  - docassemble.AssemblyLine:assembly_line.yml
+  - docassemble.MassAccess:massaccess.yml
   - user_information.yml
   - about_the_case.yml
   - search_questions.yml
@@ -14,8 +15,7 @@ metadata:
   short title: |
     Service by Alternate Means and Diligent Search
 ---
-comment: |
-  This section is used by MAVirtualCourts to control how some of the questions work.
+
 mandatory: True
 code: |
   interview_metadata # make sure we initialize the object
@@ -36,9 +36,6 @@ code: |
     'attachment block variable': 'service_by_alternate_means_diligent_search_attachment',
     'typical role': 'plaintiff',
   })
----
-include:
-  - docassemble.MAVirtualCourt:basic-questions.yml
 ---
 features: 
   navigation: True
@@ -83,7 +80,7 @@ code: |
       address_date_guess
   last_contact_unknown
   if military_check == True and military_question == True:
-    record_request
+    record_request.file
   if not military_check:
     check_phone
   check_phone
@@ -114,6 +111,7 @@ code: |
   #if is_attorney:
   #  attorney_name_full
   # users[0].phone_number
+  download_service_by_alternate_means_diligent_search
 ---
 comment: |
   This question is used to introduce your interview. Please customize
@@ -186,35 +184,37 @@ buttons:
 id: Placeholder preview screen
 continue button field: service_by_alternate_means_diligent_search_preview_question
 question: |
-  Placeholder preview screen
+  Review your document before you sign it
 subquestion: |
   Here is a preview of the form you'll sign on the next page. 
   
-  ${service_by_alternate_means_diligent_search_attachment['preview']}
+  ${ service_by_alternate_means_diligent_search_attachment.as_pdf(key='preview') }
 ---
 progress: 100
-mandatory: True
-id: Placeholder download screen
+continue button field: download_service_by_alternate_means_diligent_search
+id: download screen
 question: |
-  Placeholder download screen
+  Your document is ready
 subquestion: |
-  Placeholder
   
   ### Next steps
   
   1. Download and print out the PDF.
   2. Mail or bring the document to the court where you are filing.
+ 
+  ${ al_user_bundle.download_list_html() }
   
-  Below is a preview of your form.
-  
-  ${combined_motion}
-  
-  ${ text_phone_response }
-need: service_by_alternate_means_diligent_search
-attachment code: service_by_alternate_means_diligent_search_attachment['final']
 ---
 objects:
-  - service_by_alternate_means_diligent_search_attachment: DADict
+  - service_by_alternate_means_diligent_search_attachment: ALDocument.using(title="Service by alternate means", filename="Service_by_Alternate_Means_and_Diligent_Search", enabled=True, has_addendum=False)
+  - record_request: ALDocumentUpload.using(title="Record request", filename="record_request")
+---
+code: |
+  record_request.enabled = military_check and military_question
+---
+objects:
+  - al_user_bundle: ALDocumentBundle.using(elements=[service_by_alternate_means_diligent_search_attachment, record_request], enabled=True, title="Documents for your records", filename="Service_by_Alternate_Means_and_Diligent_Search")
+  - al_court_bundle: ALDocumentBundle.using(elements=[service_by_alternate_means_diligent_search_attachment, record_request], enabled=True, title="Documents for your records", filename="Service_by_Alternate_Means_and_Diligent_Search")
 ---
 need: text_phone_response
 attachment:
@@ -312,28 +312,10 @@ content: |
   ${ text_response }
   % endif
 ---
-code: |
-  final_form_to_file = [general_cover_sheet, combined_motion]
----
-code: |
-  form_to_file_no_cover = combined_motion
----
-code: |
-  if military_check:
-    combined_motion = pdf_concatenate(service_by_alternate_means_diligent_search_attachment["final"], record_request, filename="motion_for_alt_service.pdf")
-  else:
-    combined_motion = service_by_alternate_means_diligent_search_attachment["final"]
----
-code: |
-  if military_check:
-    form_to_sign = pdf_concatenate(service_by_alternate_means_diligent_search_attachment["preview"], record_request, filename="motion_for_alt_service.pdf")
-  else:
-    form_to_sign = service_by_alternate_means_diligent_search_attachment["preview"]
----
 id: review screens
 event: review_service_by_alternate_means_diligent_search
 question: |
-  Placeholder Review Screen
+  Review your answers
 subquestion: |
   Edit your answers below
 review: 
